# triptych

./: Cargo.toml  LICENSE  README.md  clippy.toml  lints.toml
.github/workflows/: ci.yml
benches/: parallel.rs  triptych.rs
examples/: ringct.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parallel.rs  proofs.rs
src/: gray.rs  lib.rs  parameters.rs  proof.rs  statement.rs  transcript.rs  util.rs  witness.rs
src/parallel/: mod.rs  parameters.rs  proof.rs  statement.rs  transcript.rs  witness.rs
