[package]
name = "triptych"
version = "0.1.1"
authors = ["The Tari Project"]
edition = "2021"
description = "An experimental Rust implementation of the Triptych zero-knowledge proving system"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["cryptography"]
documentation = "https://docs.rs/triptych"
repository = "https://github.com/tari-project/triptych"

[dependencies]
blake3 = { version = "1.5.1", default-features = false }
borsh = { version = "1.5.1", optional = true, default-features = false }
crypto-bigint = { version = "0.5.5", default-features = false }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "digest", "rand_core", "zeroize"] }
itertools = { version = "0.12.1", default-features = false }
merlin = { version = "3.0.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.198", optional = true, default-features = false, features = ["derive"] }
snafu = { version = "0.8.2", default-features = false }
subtle = { version = "2.5.0", default-features = false }
zeroize = { version = "1.7.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
rand_chacha = { version = "0.3.1", default-features = false }

[features]
default = ["rand", "std"]
# Adds proof serialization and deserialization via [`borsh`](https://crates.io/crates/borsh)
borsh = ["dep:borsh"]
# Adds additional prover functionality that supplies a cryptographically-secure random number generator
rand = ["rand_core/getrandom"]
# Adds proof serialization and deserialization via [`serde`](https://crates.io/crates/serde)
serde = ["dep:serde", "curve25519-dalek/serde", "zeroize/serde"]
# Adds corresponding dependency features
std = ["blake3/std", "borsh?/std", "itertools/use_std", "merlin/std", "rand_core/std", "serde?/std", "snafu/std", "subtle/std", "zeroize/std"]

[[bench]]
name = "triptych"
harness = false

[[bench]]
name = "parallel"
harness = false

[[example]]
name = "ringct"
crate-type = ["staticlib"]
test = true
