[package]
name = "triptych_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.triptych]
path = ".."

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "proofs"
path = "fuzz_targets/proofs.rs"
test = false
doc = false
